test: Depthwise separable conv

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -20,7 +20,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, Conv2D, Embedding\n",
+    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, Conv2D, Embedding, DepthwiseConv2D, SeparableConv2D\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.losses import BinaryCrossentropy\n",
     "from tensorflow.keras.initializers import GlorotNormal, GlorotUniform, Zeros\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 25.322094440460205\n"
+      "running time: 19.17914390563965\n"
      ]
     }
    ],
@@ -467,18 +467,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_7\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_3 (Conv2D)           (None, 127, 127, 64)      1792      \n",
+      " conv2d_4 (Conv2D)           (None, 127, 127, 64)      1792      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,792\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 12.900575160980225\n"
+      "running time: 8.548577785491943\n"
      ]
     }
    ],
@@ -580,6 +580,46 @@
     "\n",
     "et = time.time()\n",
     "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([1000, 127, 127, 27])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ep.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([27, 64])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kf.shape"
    ]
   },
   {
@@ -603,11 +643,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Depthwise separable Conv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tf.random.set_seed(1)\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(SeparableConv2D(64, kernel_size, strides = strides, padding='valid', input_shape = image_size+(num_channels,) ) )\n",
+    "X_ = model(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([1000, 127, 127, 64])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.random.set_seed(1)\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(DepthwiseConv2D(kernel_size, strides = strides, padding='valid', input_shape = image_size+(num_channels,) ) )\n",
+    "model.add(Conv2D(64, 1, strides = 1, padding='valid',  ) )\n",
+    "X_1 = model(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([1000, 127, 127, 64])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(X_ == X_1)"
+   ]
   }
  ],
  "metadata": {
@@ -628,6 +755,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
+  "toc-autonumbering": true,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
