--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,12 +646,174 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Depthwise separable Conv"
+    "# Depthwise Separable Conv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Depthwise convolution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 0.38305139541625977\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(DepthwiseConv2D(kernel_size, strides = strides, padding='valid', input_shape = image_size+(num_channels,), depthwise_initializer='ones' ) )\n",
+    "X_ = model(X)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_7\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " depthwise_conv2d_7 (Depthwi  (None, 127, 127, 3)      30        \n",
+      " seConv2D)                                                       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 30\n",
+      "Trainable params: 30\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcnn = model.layers[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([3, 3, 3, 1])"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dcnn.depthwise_kernel.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([None, 127, 127, 3])"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dcnn.output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 2.444392442703247\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "\n",
+    "ep = extract_patches(X, sizes= [1]+dcnn.depthwise_kernel.shape[:2]+[1], strides=[1, strides, strides, 1], rates = [1,1,1,1], padding = 'VALID' )\n",
+    "ep_ = tf.reshape(ep, list(X_.shape[:3]) + list(kernel_size) + [-1])\n",
+    "\n",
+    "kf = tf.squeeze(dcnn.depthwise_kernel, axis=-1)\n",
+    "\n",
+    "result = tf.einsum('abcdef,def->abcf', ep_, kf)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(result == X_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Depthwise separable convolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +821,59 @@
     "\n",
     "model = Sequential()\n",
     "model.add(SeparableConv2D(64, kernel_size, strides = strides, padding='valid', input_shape = image_size+(num_channels,) ) )\n",
-    "X_ = model(X)"
+    "X_dsc = model(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_10\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " separable_conv2d_1 (Separab  (None, 127, 127, 64)     283       \n",
+      " leConv2D)                                                       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 283\n",
+      "Trainable params: 283\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'separable_conv2d_1/bias:0' shape=(64,) dtype=float32, numpy=\n",
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)>"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.layers[0].bias"
    ]
   },
   {
@@ -684,16 +898,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "tf.random.set_seed(1)\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(DepthwiseConv2D(kernel_size, strides = strides, padding='valid', input_shape = image_size+(num_channels,) ) )\n",
+    "model.add(DepthwiseConv2D(kernel_size, strides = strides, padding='valid', input_shape = image_size+(num_channels,), use_bias=False ) )\n",
     "model.add(Conv2D(64, 1, strides = 1, padding='valid',  ) )\n",
-    "X_1 = model(X)"
+    "X_dsc_ = model(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_11\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " depthwise_conv2d_9 (Depthwi  (None, 127, 127, 3)      27        \n",
+      " seConv2D)                                                       \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 127, 127, 64)      256       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 283\n",
+      "Trainable params: 283\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -718,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -727,14 +971,21 @@
        "True"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.alltrue(X_ == X_1)"
+    "np.alltrue(X_dsc == X_dsc_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
