docs: Add formula and description

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -408,8 +408,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create sample data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,11 +441,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = tf.cast(X, tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([1000, 256, 256, 3])"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conventional Convolution"
    ]
   },
   {
@@ -646,26 +680,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Depthwise Separable Conv"
+    "## Depthwise Convolution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Depthwise convolution"
+    "* `input_shape`: $\\text{batch size}\\times \\text{input width}\\times \\text{input height} \\times \\text{num of input channels}$\n",
+    "* `kernel_shape`: $\\text{kernel width}\\times \\text{kernel height} \\times \\text{num of input channels}$\n",
+    "\n",
+    "$\\large \\displaystyle I_j * K_j = O_j$ w.r.t the j-th input channel\n",
+    "\n",
+    "$\\large \\displaystyle O = \\begin{bmatrix} O_1\\\\ \\vdots\\\\ O_n \\end{bmatrix}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.38305139541625977\n"
+      "running time: 0.35893702507019043\n"
      ]
     }
    ],
@@ -678,6 +717,26 @@
     "\n",
     "et = time.time()\n",
     "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([1000, 127, 127, 3])"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_.shape"
    ]
   },
   {
@@ -759,14 +818,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 2.444392442703247\n"
+      "running time: 1.6846446990966797\n"
      ]
     }
    ],
@@ -812,8 +871,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Depthwise convolution -> Pointwise convolution "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,18 +892,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_10\"\n",
+      "Model: \"sequential_14\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " separable_conv2d_1 (Separab  (None, 127, 127, 64)     283       \n",
+      " separable_conv2d_2 (Separab  (None, 127, 127, 64)     283       \n",
       " leConv2D)                                                       \n",
       "                                                                 \n",
       "=================================================================\n",
@@ -854,40 +920,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Variable 'separable_conv2d_1/bias:0' shape=(64,) dtype=float32, numpy=\n",
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)>"
+       "TensorShape([1000, 127, 127, 3])"
       ]
      },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.layers[0].bias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([1000, 127, 127, 64])"
-      ]
-     },
-     "execution_count": 60,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scnn = model.layers[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,6 +959,55 @@
     "model.add(DepthwiseConv2D(kernel_size, strides = strides, padding='valid', input_shape = image_size+(num_channels,), use_bias=False ) )\n",
     "model.add(Conv2D(64, 1, strides = 1, padding='valid',  ) )\n",
     "X_dsc_ = model(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dwcnn, pwcnn = model.layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(dwcnn.depthwise_kernel == scnn.depthwise_kernel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(pwcnn.kernel == scnn.pointwise_kernel)"
    ]
   },
   {
