docs: Show the shape of tensor - extracted patches

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "TensorShape([1000, 256, 256, 3])"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,14 +697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.35893702507019043\n"
+      "running time: 0.42088794708251953\n"
      ]
     }
    ],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "TensorShape([1000, 127, 127, 3])"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,19 +741,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_7\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " depthwise_conv2d_7 (Depthwi  (None, 127, 127, 3)      30        \n",
-      " seConv2D)                                                       \n",
+      " depthwise_conv2d (Depthwise  (None, 127, 127, 3)      30        \n",
+      " Conv2D)                                                         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 30\n",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "TensorShape([3, 3, 3, 1])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,34 +798,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([None, 127, 127, 3])"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dcnn.output.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 1.6846446990966797\n"
+      "running time: 2.4244465827941895\n"
      ]
     }
    ],
@@ -845,7 +825,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([1000, 127, 127, 3, 3, 3]),\n",
+       " TensorShape([3, 3, 3]),\n",
+       " TensorShape([1000, 127, 127, 3]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ep_ shape: batch size * f.map width * f.map height * kernel width * kernel height * channels\n",
+    "\n",
+    "ep_.shape, kf.shape, result.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +858,7 @@
        "True"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
