docs: Add description

--- a/neural_network/Backpropagation.ipynb
+++ b/neural_network/Backpropagation.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experiment 1"
+    "## Experiment 1 - failed"
    ]
   },
   {
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experiment 2"
+    "## Experiment 2 - success"
    ]
   },
   {
