docs: Rearrange notebook cells

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -27,7 +27,7 @@
     "from tensorflow.keras import backend as K\n",
     "\n",
     "from tensorflow.image import extract_patches\n",
-    "import tensorflow_text as tft"
+    "# import tensorflow_text as tft"
    ]
   },
   {
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 1000\n",
+    "num_samples = 256\n",
     "image_size = (256, 256)\n",
     "num_channels = 3\n",
     "\n",
@@ -456,7 +456,7 @@
     {
      "data": {
       "text/plain": [
-       "TensorShape([1000, 256, 256, 3])"
+       "TensorShape([256, 256, 256, 3])"
       ]
      },
      "execution_count": 5,
@@ -704,7 +704,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.42088794708251953\n"
+      "running time: 0.15592718124389648\n"
      ]
     }
    ],
@@ -727,7 +727,7 @@
     {
      "data": {
       "text/plain": [
-       "TensorShape([1000, 127, 127, 3])"
+       "TensorShape([256, 127, 127, 3])"
       ]
      },
      "execution_count": 7,
@@ -798,14 +798,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 2.4244465827941895\n"
+      "running time: 0.7058987617492676\n"
      ]
     }
    ],
@@ -825,18 +825,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(TensorShape([1000, 127, 127, 3, 3, 3]),\n",
+       "(TensorShape([256, 127, 127, 3, 3, 3]),\n",
        " TensorShape([3, 3, 3]),\n",
-       " TensorShape([1000, 127, 127, 3]))"
+       " TensorShape([256, 127, 127, 3]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,12 +878,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Depthwise convolution -> Pointwise convolution "
+    "* Depthwise separable: **Depthwise** convolution -> **Pointwise** convolution "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,19 +896,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_14\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " separable_conv2d_2 (Separab  (None, 127, 127, 64)     283       \n",
-      " leConv2D)                                                       \n",
+      " separable_conv2d (Separable  (None, 127, 127, 64)     283       \n",
+      " Conv2D)                                                         \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 283\n",
@@ -924,16 +924,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([1000, 127, 127, 3])"
+       "TensorShape([256, 127, 127, 3])"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "True"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
        "True"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,21 +1016,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_11\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " depthwise_conv2d_9 (Depthwi  (None, 127, 127, 3)      27        \n",
+      " depthwise_conv2d_1 (Depthwi  (None, 127, 127, 3)      27        \n",
       " seConv2D)                                                       \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 127, 127, 64)      256       \n",
+      " conv2d (Conv2D)             (None, 127, 127, 64)      256       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 283\n",
@@ -1046,27 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([1000, 127, 127, 64])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1055,7 @@
        "True"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
