docs: Add description

--- a/neural_network/Transformer.ipynb
+++ b/neural_network/Transformer.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformerBlock(layers.Layer):\n",
     "    def __init__(self, embed_dim, num_heads, ff_dim, rate=0.1):\n",
     "        super(TransformerBlock, self).__init__()\n",
-    "        self.att = layers.MultiHeadAttention(num_heads=num_heads, key_dim=embed_dim//num_heads)\n",
+    "        self.attention = layers.MultiHeadAttention(num_heads=num_heads, key_dim=embed_dim//num_heads)\n",
     "        self.ffn = keras.Sequential(\n",
     "            [layers.Dense(ff_dim, activation=\"relu\"), layers.Dense(embed_dim),]\n",
     "        )\n",
@@ -52,18 +52,22 @@
     "        self.dropout2 = layers.Dropout(rate)\n",
     "\n",
     "    def call(self, inputs, training):\n",
-    "        attn_output = self.att(inputs, inputs)\n",
-    "        self.attention_output_result = attn_output\n",
-    "        attn_output = self.dropout1(attn_output, training=training)\n",
-    "        out1 = self.layernorm1(inputs + attn_output)\n",
+    "        attention_output = self.attention(inputs, inputs)\n",
+    "        self.attention_output_result = attention_output\n",
+    "        attention_output = self.dropout1(attention_output, training=training)\n",
+    "        out1 = self.layernorm1(inputs + attention_output)\n",
+    "        \n",
     "        ffn_output = self.ffn(out1)\n",
     "        ffn_output = self.dropout2(ffn_output, training=training)\n",
-    "        return self.layernorm2(out1 + ffn_output)"
+    "        \n",
+    "        # residual connection\n",
+    "        output = self.layernorm2(out1 + ffn_output)\n",
+    "        return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25000, 200)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,40 +155,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_6\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_8 (InputLayer)        [(None, 200)]             0         \n",
+      " input_1 (InputLayer)        [(None, 200)]             0         \n",
       "                                                                 \n",
       " token_and_position_embeddin  (None, 200, 32)          646400    \n",
-      " g_7 (TokenAndPositionEmbedd                                     \n",
-      " ing)                                                            \n",
+      " g (TokenAndPositionEmbeddin                                     \n",
+      " g)                                                              \n",
       "                                                                 \n",
-      " transformer_block_7 (Transf  (None, 200, 32)          6202      \n",
-      " ormerBlock)                                                     \n",
+      " transformer_block (Transfor  (None, 200, 32)          6464      \n",
+      " merBlock)                                                       \n",
       "                                                                 \n",
-      " global_average_pooling1d_6   (None, 32)               0         \n",
-      " (GlobalAveragePooling1D)                                        \n",
+      " global_average_pooling1d (G  (None, 32)               0         \n",
+      " lobalAveragePooling1D)                                          \n",
       "                                                                 \n",
-      " dropout_28 (Dropout)        (None, 32)                0         \n",
+      " dropout_2 (Dropout)         (None, 32)                0         \n",
       "                                                                 \n",
-      " dense_28 (Dense)            (None, 20)                660       \n",
+      " dense_2 (Dense)             (None, 20)                660       \n",
       "                                                                 \n",
-      " dropout_29 (Dropout)        (None, 20)                0         \n",
+      " dropout_3 (Dropout)         (None, 20)                0         \n",
       "                                                                 \n",
-      " dense_29 (Dense)            (None, 2)                 42        \n",
+      " dense_3 (Dense)             (None, 2)                 42        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 653,304\n",
-      "Trainable params: 653,304\n",
+      "Total params: 653,566\n",
+      "Trainable params: 653,566\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -176,22 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[TensorShape([20000, 32]), TensorShape([200, 32])]"
+       "[]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[l.shape for l in model.layers[1].weights]"
+    "model.layers[1].token_emb.metrics"
    ]
   },
   {
@@ -202,14 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "[TensorShape([32, 3, 16]),\n",
-       " TensorShape([3, 16]),\n",
-       " TensorShape([32, 3, 16]),\n",
-       " TensorShape([3, 16]),\n",
-       " TensorShape([32, 3, 16]),\n",
-       " TensorShape([3, 16]),\n",
-       " TensorShape([3, 16, 32]),\n",
-       " TensorShape([32])]"
+       "[TensorShape([20000, 32]), TensorShape([200, 32])]"
       ]
      },
      "execution_count": 15,
@@ -218,7 +235,34 @@
     }
    ],
    "source": [
-    "[l.shape for l in model.layers[2].att.weights]"
+    "[l.shape for l in model.layers[1].weights]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[TensorShape([32, 2, 16]),\n",
+       " TensorShape([2, 16]),\n",
+       " TensorShape([32, 2, 16]),\n",
+       " TensorShape([2, 16]),\n",
+       " TensorShape([32, 2, 16]),\n",
+       " TensorShape([2, 16]),\n",
+       " TensorShape([2, 16, 32]),\n",
+       " TensorShape([32])]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[l.shape for l in model.layers[2].attention.weights]"
    ]
   },
   {
@@ -239,29 +283,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[code source](https://github.com/keras-team/keras/blob/07e13740fd181fc3ddec7d9a594d8a08666645f6/keras/layers/attention/multi_head_attention.py)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Prepare tensors: Query, Key, Value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "att = model.layers[2].att\n",
+    "att = model.layers[2].attention\n",
     "\n",
     "query = att._query_dense(x_train_emb)\n",
     "\n",
-    "# `key` = [B, S, N, H]\n",
+    "# `key` = [batch_size, max_len, num_heads, dim_hidden]\n",
     "key = att._key_dense(x_train_emb)\n",
     "\n",
-    "# `value` = [B, S, N, H]\n",
+    "# `value` = [batch_size, max_len, num_heads, dim_hidden]\n",
     "value = att._value_dense(x_train_emb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +321,7 @@
        "TensorShape([8, 200, 32])"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +341,7 @@
        "TensorShape([8, 200, 2, 16])"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +361,7 @@
        "True"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +381,7 @@
        "True"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +401,7 @@
        "True"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
